# ai-augmented-workflow

./: .env.example  .gitignore  .markdownlint.json  .mcp.json.example  .mlc_config.json  CLAUDE.md.example  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  workflow-guide.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: lint.yml  skillsaw-badge.yml
app-dashboard/: README.md  apps.json.example  server.py
app-dashboard/static/: app.js  index.html  style.css
crux/: README.md  pyproject.toml
crux/src/crux/: mcp_server.py
crux/src/crux/cli/: commands.py
crux/src/crux/db/: models.py
crux/src/crux/web/: server.py
crux/src/crux/web/static/: index.html
docs/: CUSTOMIZATION.md  SETUP.md
local-mcp-stack/: Dockerfile.google-contacts  Dockerfile.time-mcp  docker-compose.yml  mcp-proxy-config.json  time-mcp-server.py
memory/: MEMORY.md  README.md  user_profile.example.md  user_writing_style.example.md
research/: README.md
scripts/: backup.sh  disaster-recovery.md  setup.ps1  setup.sh
skills/: README.md
skills/capture/: SKILL.md
skills/delegate/: SKILL.md
skills/inbox-triage/: SKILL.md
skills/learn/: SKILL.md
skills/meeting-prep/: SKILL.md
skills/review/: SKILL.md
stakeholders/: README.md
templates/: decision-record.md  meeting-brief.md  meeting-record.md
